--- a/Resources/Public/Css/DragDrop.css
+++ b/Resources/Public/Css/DragDrop.css
@@ -1,19 +1,17 @@
 .t3-content-element-drop-zone {
-    max-height: 225px;
-}
-.t3-content-element-drop-zone {
     border: 1px dashed #e8a33d;
     border-radius: 2px;
     background-color: #fbefdd;
-    height: 27px;
+    height: 26px;
     margin: 10px;
+    max-height: 225px;
 }
-.t3-content-element-drop-zone.t3-content-element-drop-zone-hover {
+.t3-content-element-drop-zone-hover {
     border: 1px dashed #79a548;
     border-radius: 2px;
     background-color: #d1e2bd;
-    margin: -38px 10px -37px 10px;
-    padding: 50px 10px;
+    margin: -34px 10px -34px 10px !important;
+    padding: 46px 10px;
     z-index: 50;
     position: relative;
     opacity: 0.65;
